--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "mikro-orm migration:create",
+    "migration:run": "mikro-orm migration:up",
+    "migration:revert": "mikro-orm migration:down"
   },
   "dependencies": {
     "@mikro-orm/cli": "^6.2.9",
@@ -30,8 +33,12 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.3.9",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -44,6 +51,7 @@
     "@nestjs/testing": "^10.0.0",
     "@swc/cli": "^0.3.14",
     "@swc/core": "^1.6.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
