--- a/apps/discord-service/package.json
+++ b/apps/discord-service/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.3.9",
     "@nestjs/platform-express": "^10.0.0",
+    "@repo/discord-utils": "*",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "kafkajs": "^2.2.4",
